	directories for patterns in 'classify'.

	Do not resolve symbolic links in directory preview.  Thanks to
	filterfalse.

	getpanetype() got new value ("tree") to indicate tree-view.  Thanks to
	filterfalse.

	Disallow applying :chmod on ".." entry.

	Disallow moving/copying/linking files into custom view (put is forbidden,
	so makes sense to forbid these too).

	Fixed redirecting stdout of background commands to /dev/null, which could
	be unwritable descriptor.  Thanks to c02y.

	Fixed inconsistent file name demangling on moving files from trash in
	custom view.

	Fixed decreasing number of selected files after zd operation.

	Fixed wrong whole value completion of string list options if entered value
	contains a comma (,).

	Fixed displaying of previous status bar message on 'hlsearch' 'noincsearch'
	when match occurs.  Thanks to filterfalse.

	Fixed incorrect completion of non-first option name of the :set command.

	Fixed assertion failure on file rename of specific pattern (renaming files
	1, 2 via `:rename 2 3` is the shortest example).  Thanks to aleksejrs.

	Fixed rejecting to clone files in custom view, when name is specified
	explicitly (form without arguments was properly disabled before).

	Fixed changing attributes of files in custom views on Windows.

0.8.2-beta to 0.8.2

	Added support for matchit to filetype plugin.  Patch by filterfalse.

	Fixed processing of root directory (completion, :cd).  Thanks to
	filterfalse.

	Fixed completion of commands after :!.  Thanks to filterfalse.

	Fixed formatting/wording/outdated notes in documentation.  Patches by
	filterfalse.

0.8.1a to 0.8.2-beta

	Added highlighting of search matches in menus.

	Added :noh[lsearch] command to menu mode.

	Added quick shortcuts to dialogs.  Patch by oo-.

	Added 'wildstyle' option to control the way wild menu is displayed.
	Enables displaying it as a menu with one item per line.  Thanks to
	santhoshr and octos.
