@@ -988,22 +988,25 @@ complete_filename_only(const char str[], void *arg)
 void
 rename_current_file(FileView *view, int name_only)
 {
-	const char *const old = get_current_file_name(view);
-	char filename[strlen(old) + 1];
+	const dir_entry_t *entry = &view->dir_entry[view->list_pos];
+	char filename[strlen(entry->name) + 1];
 
 	if(!can_change_view_files(view))
 	{
 		return;
 	}
-
-	copy_str(filename, sizeof(filename), old);
-	if(is_parent_dir(filename))
+	if(fentry_is_fake(entry))
+	{
+		return;
+	}
+	if(is_parent_dir(entry->name))
 	{
 		show_error_msg("Rename error",
 				"You can't rename parent directory this way");
 		return;
 	}
 
+	copy_str(filename, sizeof(filename), entry->name);
 	if(name_only)
 	{
 		copy_str(rename_file_ext, sizeof(rename_file_ext), cut_extension(filename));
@@ -1790,6 +1793,11 @@ change_link(FileView *view)
 		return 0;
 	}
 
+	if(fentry_is_fake(entry))
+	{
+		status_bar_error("Entry doesn't correspond to a file");
+		return 1;
+	}
 	if(entry->type != FT_LINK)
 	{
 		status_bar_error("File is not a symbolic link");
@@ -4390,6 +4398,11 @@ update_dir_entry_size(const FileView *view, int index, int force)
 {
 	char full_path[PATH_MAX];
 	const dir_entry_t *const entry = &view->dir_entry[index];
+
+	if(fentry_is_fake(entry))
+	{
+		return;
+	}
 
 	if(is_parent_dir(entry->name))
 	{
