@@ -26,6 +26,7 @@
 
 #include "../compat/fs_limits.h"
 #include "../int/file_magic.h"
+#include "../modes/dialogs/msg_dialog.h"
 #include "../modes/cmdline.h"
 #include "../modes/menu.h"
 #include "../ui/fileview.h"
@@ -55,10 +56,19 @@ show_file_menu(FileView *view, int background)
 
 	int i;
 	int max_len;
+	assoc_records_t ft, magic;
+	char *typed_name;
 
-	char *const typed_name = get_typed_entry_fpath(get_current_entry(view));
-	assoc_records_t ft = ft_get_all_programs(typed_name);
-	assoc_records_t magic = get_magic_handlers(typed_name);
+	dir_entry_t *const entry = get_current_entry(view);
+	if(fentry_is_fake(entry))
+	{
+		show_error_msg("File menu", "Entry doesn't correspond to a file.");
+		return 0;
+	}
+
+	typed_name = get_typed_entry_fpath(entry);
+	ft = ft_get_all_programs(typed_name);
+	magic = get_magic_handlers(typed_name);
 	free(typed_name);
 
 	init_menu_info(&m, strdup("Filetype associated commands"),
