@@ -42,6 +42,8 @@
 	Disallow moving/copying/linking files into custom view (put is forbidden,
 	so makes sense to forbid these too).
 
+	Disallow selecting ".." entry with :select command.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
